--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,17 +1,16 @@
 .title {
-  margin-top: 30px;
+  margin: 30px 0px;
   text-align: left;
-  font-size: 2.0rem;
+  font-size: 2rem;
 }
 
 .grid-container {
-  margin-top: 50px;
   margin-bottom: 75px;
 }
 
 .grid-header {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 2fr;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
   gap: 4px;
   grid-auto-rows: minmax(30px, auto);
   justify-content: center;
@@ -30,8 +29,7 @@
 
 .grid-row {
   display: grid;
-  margin-top: 4px;
-  grid-template-columns: 2fr 1fr 1fr 1fr 2fr;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
   gap: 4px;
   grid-auto-rows: minmax(30px, auto);
   justify-content: center;
@@ -48,5 +46,55 @@
 }
 
 .grid-row:nth-child(odd) {
-  background: 'pink';
+  background: rgba(51, 102, 153, 0.2);
+}
+
+.filter {
+  margin: 0px 0px 20px auto;
+  width: 200px;
+  font-size: 0.8rem;
+}
+
+.filter select {
+  font-size: 0.8rem;
+  width: 100%;
+  outline: none;
+  padding: 8px 12px;
+  cursor: pointer;
+  border-radius: 5px;
+  appearance: none;
+  color: black;
+  background-color: white;
+  background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20height%3D%2212%22%20viewBox%3D%220%200%2012%2012%22%3E%3Ctitle%3Edown-arrow%3C%2Ftitle%3E%3Cg%20fill%3D%22%23000000%22%3E%3Cpath%20d%3D%22M10.293%2C3.293%2C6%2C7.586%2C1.707%2C3.293A1%2C1%2C0%2C0%2C0%2C.293%2C4.707l5%2C5a1%2C1%2C0%2C0%2C0%2C1.414%2C0l5-5a1%2C1%2C0%2C1%2C0-1.414-1.414Z%22%20fill%3D%22%23000000%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fsvg%3E');
+  background-size: 0.6em;
+  background-position: calc(100% - 1.0em) center;
+  background-repeat: no-repeat;
+}
+
+.select:hover {
+  outline: none;
+  border: 1px solid black;
+  background-color: rgba(51, 102, 153, 0.2);
+}
+
+.empty-grid-container {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.displayed-filter {
+  font-weight: 600;
+  color: #336699;
+}
+
+.image-container {
+  max-width: 600px;
+  height: 600px;
+  margin: auto;
+  object-fit: cover;
+}
+
+img {
+  width: 100%;
+  border-radius: 20px;
 }
