--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -49,8 +49,14 @@
   background: rgba(51, 102, 153, 0.2);
 }
 
+.filter-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .filter {
-  margin: 0px 0px 20px auto;
+  display: inline-block;
+  margin: 0px 0px 20px 20px;
   width: 200px;
   font-size: 0.8rem;
 }
