--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -173,7 +173,7 @@ img {
   cursor: pointer;
 }
 
-#pagination-value {
+.pagination-value-container {
   display: inline-block;
   padding: 10px;
   width: 20px;
@@ -181,9 +181,20 @@ img {
   border-radius: 5px;
 }
 
-#pagination-value:hover {
+.pagination-value-container:hover {
   background-color: rgba(51, 102, 153, 0.2);
   cursor: pointer;
+}
+
+.pagination-value-container-active {
+  display: inline-block;
+  padding: 10px;
+  width: 20px;
+  outline: none;
+  border-radius: 5px;
+  background-color: #336699;
+  cursor: pointer;
+  color: white;
 }
 
 #pagination-arrow-right {
@@ -191,6 +202,7 @@ img {
   background-repeat: no-repeat;
   background-size: 14px 14px;
   background-position: center center;
+  margin-left: 20px;
 }
 
 #pagination-arrow-left {
@@ -198,6 +210,7 @@ img {
   background-repeat: no-repeat;
   background-size: 14px 14px;
   background-position: center center;
+  margin-right: 20px;
 }
 
 
@@ -211,6 +224,7 @@ img {
   background-size: 14px 14px;
   background-position: center center;
   opacity: 30%;
+  margin-right: 20px;
 }
 
 #pagination-arrow-right-disabled:disabled {
@@ -223,4 +237,5 @@ img {
   background-size: 14px 14px;
   background-position: center center;
   opacity: 30%;
+  margin-left: 20px;
 }
