--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,9 @@
 .title {
-  margin: 30px 0px;
+  margin: 50px 0px 80px;
+  padding-bottom: 20px;
   text-align: left;
   font-size: 2rem;
+  border-bottom: 1px solid black;
 }
 
 .grid-container {
