--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 html {
-  font-family: sans-serif, Verdana, Tahoma;
+  font-family: Verdana, Tahoma;
   font-size: 16px;
 }
 
 body {
   width: 80%;
   margin: auto;
+  margin-bottom: 100px;
 }
