--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,6 +4,11 @@
   text-align: left;
   font-size: 2rem;
   border-bottom: 1px solid black;
+  color: #336699;
+  -webkit-box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  /* text-shadow: 0px 3px rgba(51, 102, 153, 0.2); */
 }
 
 .grid-container {
@@ -77,6 +82,9 @@
   background-size: 18px 18px;
   background-position: right 5px center;
   width: 100%;
+  -moz-box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 3px rgba(51, 102, 153, 0.2);
 }
 
 input:hover {
@@ -99,6 +107,9 @@ input:focus {
   margin: 0px 0px 20px 20px;
   width: 200px;
   font-size: 0.8rem;
+  -moz-box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 3px rgba(51, 102, 153, 0.2);
 }
 
 .filter select {
@@ -222,7 +233,6 @@ img {
   background-position: center center;
   margin-right: 20px;
 }
-
 
 #pagination-arrow-left-disabled:disabled {
   background-color: transparent;
