--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -170,6 +170,7 @@ img {
   justify-self: flex-end;
   max-width: 600px;
   overflow-x: hidden;
+  padding: 10px;
 }
 
 .pagination-arrow {
@@ -192,6 +193,9 @@ img {
 .pagination-arrow:hover {
   background-color: rgba(51, 102, 153, 0.2);
   cursor: pointer;
+  -moz-box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 3px rgba(51, 102, 153, 0.2);
 }
 
 .pagination-value-container {
@@ -205,6 +209,9 @@ img {
 .pagination-value-container:hover {
   background-color: rgba(51, 102, 153, 0.2);
   cursor: pointer;
+  -moz-box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 3px rgba(51, 102, 153, 0.2);
 }
 
 .pagination-value-container-active {
@@ -216,6 +223,9 @@ img {
   background-color: #336699;
   cursor: pointer;
   color: white;
+  -moz-box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px -3px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 3px rgba(51, 102, 153, 0.2);
 }
 
 #pagination-arrow-right {
